// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`guc.sql > line 3 1`] = `
[
  "SHOW datestyle",
  {
    "stmts": [
      {
        "stmt": {
          "VariableShowStmt": {
            "name": "datestyle",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`guc.sql > line 6 1`] = `
[
  "SET vacuum_cost_delay TO 40",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "ival": {
                    "ival": 40,
                  },
                  "location": 25,
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "vacuum_cost_delay",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`guc.sql > line 13 1`] = `
[
  "SET LOCAL vacuum_cost_delay TO 50",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "ival": {
                    "ival": 50,
                  },
                  "location": 31,
                },
              },
            ],
            "is_local": true,
            "kind": "VAR_SET_VALUE",
            "name": "vacuum_cost_delay",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`guc.sql > line 20 1`] = `
[
  "BEGIN",
  {
    "stmts": [
      {
        "stmt": {
          "TransactionStmt": {
            "kind": "TRANS_STMT_BEGIN",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`guc.sql > line 140 1`] = `
[
  "SET datestyle = iso, ymd",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 16,
                  "sval": {
                    "sval": "iso",
                  },
                },
              },
              {
                "A_Const": {
                  "location": 21,
                  "sval": {
                    "sval": "ymd",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "datestyle",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`guc.sql > line 148 1`] = `
[
  "SET seq_page_cost TO 'NaN'",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 21,
                  "sval": {
                    "sval": "NaN",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "seq_page_cost",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`guc.sql > line 154 1`] = `
[
  "SHOW custom.my_guc",
  {
    "stmts": [
      {
        "stmt": {
          "VariableShowStmt": {
            "name": "custom.my_guc",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`guc.sql > line 154 2`] = `
[
  "  -- error, not known yet
SET custom.my_guc = 42",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "ival": {
                    "ival": 42,
                  },
                  "location": 46,
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "custom.my_guc",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`guc.sql > line 161 1`] = `
[
  "  -- disallowed because -c cannot set this name
SHOW custom."bad-guc"",
  {
    "stmts": [
      {
        "stmt": {
          "VariableShowStmt": {
            "name": "custom.bad-guc",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`guc.sql > line 163 1`] = `
[
  "  -- could be allowed, but we choose not to
SHOW special."weird name"",
  {
    "stmts": [
      {
        "stmt": {
          "VariableShowStmt": {
            "name": "special.weird name",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`guc.sql > line 168 1`] = `
[
  "SET plpgsql.extra_foo_warnings = true",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 33,
                  "sval": {
                    "sval": "true",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "plpgsql.extra_foo_warnings",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`guc.sql > line 168 2`] = `
[
  "  -- allowed if plpgsql is not loaded yet
LOAD 'plpgsql'",
  {
    "stmts": [
      {
        "stmt": {
          "LoadStmt": {
            "filename": "plpgsql",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`guc.sql > line 170 1`] = `
[
  "  -- now, it's an error
SHOW plpgsql.extra_foo_warnings",
  {
    "stmts": [
      {
        "stmt": {
          "VariableShowStmt": {
            "name": "plpgsql.extra_foo_warnings",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`guc.sql > line 176 1`] = `
[
  "CREATE TEMP TABLE reset_test ( data text ) ON COMMIT DELETE ROWS",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_DELETE_ROWS",
            "relation": {
              "inh": true,
              "location": 18,
              "relname": "reset_test",
              "relpersistence": "t",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "data",
                  "is_local": true,
                  "location": 31,
                  "typeName": {
                    "location": 36,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`guc.sql > line 186 1`] = `
[
  "DECLARE foo CURSOR WITH HOLD FOR SELECT 1",
  {
    "stmts": [
      {
        "stmt": {
          "DeclareCursorStmt": {
            "options": 288,
            "portalname": "foo",
            "query": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 40,
                      "val": {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 40,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`guc.sql > line 194 1`] = `
[
  "SELECT pg_listening_channels()",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_listening_channels",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`guc.sql > line 201 1`] = `
[
  "DISCARD ALL",
  {
    "stmts": [
      {
        "stmt": {
          "DiscardStmt": {
            "target": "DISCARD_ALL",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`guc.sql > line 229 1`] = `
[
  "create function report_guc(text) returns text as
$$ select current_setting($1) $$ language sql
set work_mem = '1MB'",
  {
    "stmts": [
      {
        "stmt": {
          "CreateFunctionStmt": {
            "funcname": [
              {
                "String": {
                  "sval": "report_guc",
                },
              },
            ],
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": " select current_setting($1) ",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "as",
                  "location": 46,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "sql",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "language",
                  "location": 82,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "VariableSetStmt": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 110,
                            "sval": {
                              "sval": "1MB",
                            },
                          },
                        },
                      ],
                      "kind": "VAR_SET_VALUE",
                      "name": "work_mem",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "set",
                  "location": 95,
                },
              },
            ],
            "parameters": [
              {
                "FunctionParameter": {
                  "argType": {
                    "location": 27,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                  "mode": "FUNC_PARAM_DEFAULT",
                },
              },
            ],
            "returnType": {
              "location": 41,
              "names": [
                {
                  "String": {
                    "sval": "text",
                  },
                },
              ],
              "typemod": -1,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`guc.sql > line 233 1`] = `
[
  "select report_guc('work_mem'), current_setting('work_mem')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 18,
                            "sval": {
                              "sval": "work_mem",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "report_guc",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 31,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 47,
                            "sval": {
                              "sval": "work_mem",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "current_setting",
                          },
                        },
                      ],
                      "location": 31,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`guc.sql > line 235 1`] = `
[
  "alter function report_guc(text) set work_mem = '2MB'",
  {
    "stmts": [
      {
        "stmt": {
          "AlterFunctionStmt": {
            "actions": [
              {
                "DefElem": {
                  "arg": {
                    "VariableSetStmt": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 47,
                            "sval": {
                              "sval": "2MB",
                            },
                          },
                        },
                      ],
                      "kind": "VAR_SET_VALUE",
                      "name": "work_mem",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "set",
                  "location": 32,
                },
              },
            ],
            "func": {
              "objargs": [
                {
                  "TypeName": {
                    "location": 26,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              ],
              "objfuncargs": [
                {
                  "FunctionParameter": {
                    "argType": {
                      "location": 26,
                      "names": [
                        {
                          "String": {
                            "sval": "text",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                    "mode": "FUNC_PARAM_DEFAULT",
                  },
                },
              ],
              "objname": [
                {
                  "String": {
                    "sval": "report_guc",
                  },
                },
              ],
            },
            "objtype": "OBJECT_FUNCTION",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`guc.sql > line 239 1`] = `
[
  "alter function report_guc(text) reset all",
  {
    "stmts": [
      {
        "stmt": {
          "AlterFunctionStmt": {
            "actions": [
              {
                "DefElem": {
                  "arg": {
                    "VariableSetStmt": {
                      "kind": "VAR_RESET_ALL",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "set",
                  "location": 32,
                },
              },
            ],
            "func": {
              "objargs": [
                {
                  "TypeName": {
                    "location": 26,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              ],
              "objfuncargs": [
                {
                  "FunctionParameter": {
                    "argType": {
                      "location": 26,
                      "names": [
                        {
                          "String": {
                            "sval": "text",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                    "mode": "FUNC_PARAM_DEFAULT",
                  },
                },
              ],
              "objname": [
                {
                  "String": {
                    "sval": "report_guc",
                  },
                },
              ],
            },
            "objtype": "OBJECT_FUNCTION",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`guc.sql > line 244 1`] = `
[
  "create or replace function myfunc(int) returns text as $$
begin
  set local work_mem = '2MB';
  return current_setting('work_mem');
end $$
language plpgsql
set work_mem = '1MB'",
  {
    "stmts": [
      {
        "stmt": {
          "CreateFunctionStmt": {
            "funcname": [
              {
                "String": {
                  "sval": "myfunc",
                },
              },
            ],
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": "
begin
  set local work_mem = '2MB';
  return current_setting('work_mem');
end ",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "as",
                  "location": 52,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "plpgsql",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "language",
                  "location": 139,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "VariableSetStmt": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 171,
                            "sval": {
                              "sval": "1MB",
                            },
                          },
                        },
                      ],
                      "kind": "VAR_SET_VALUE",
                      "name": "work_mem",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "set",
                  "location": 156,
                },
              },
            ],
            "parameters": [
              {
                "FunctionParameter": {
                  "argType": {
                    "location": 34,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                  "mode": "FUNC_PARAM_DEFAULT",
                },
              },
            ],
            "replace": true,
            "returnType": {
              "location": 47,
              "names": [
                {
                  "String": {
                    "sval": "text",
                  },
                },
              ],
              "typemod": -1,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`guc.sql > line 252 1`] = `
[
  "select myfunc(0), current_setting('work_mem')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "ival": {},
                            "location": 14,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "myfunc",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 18,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 34,
                            "sval": {
                              "sval": "work_mem",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "current_setting",
                          },
                        },
                      ],
                      "location": 18,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`guc.sql > line 254 1`] = `
[
  "alter function myfunc(int) reset all",
  {
    "stmts": [
      {
        "stmt": {
          "AlterFunctionStmt": {
            "actions": [
              {
                "DefElem": {
                  "arg": {
                    "VariableSetStmt": {
                      "kind": "VAR_RESET_ALL",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "set",
                  "location": 27,
                },
              },
            ],
            "func": {
              "objargs": [
                {
                  "TypeName": {
                    "location": 22,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              ],
              "objfuncargs": [
                {
                  "FunctionParameter": {
                    "argType": {
                      "location": 22,
                      "names": [
                        {
                          "String": {
                            "sval": "pg_catalog",
                          },
                        },
                        {
                          "String": {
                            "sval": "int4",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                    "mode": "FUNC_PARAM_DEFAULT",
                  },
                },
              ],
              "objname": [
                {
                  "String": {
                    "sval": "myfunc",
                  },
                },
              ],
            },
            "objtype": "OBJECT_FUNCTION",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`guc.sql > line 258 1`] = `
[
  "set work_mem = '3MB'",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 15,
                  "sval": {
                    "sval": "3MB",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "work_mem",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`guc.sql > line 283 1`] = `
[
  "select myfunc(0)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "ival": {},
                            "location": 14,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "myfunc",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`guc.sql > line 289 1`] = `
[
  "  -- FAIL
select current_setting('nosuch.setting', false)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 17,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 33,
                            "sval": {
                              "sval": "nosuch.setting",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "boolval": {},
                            "location": 51,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "current_setting",
                          },
                        },
                      ],
                      "location": 17,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`guc.sql > line 290 1`] = `
[
  "  -- FAIL
select current_setting('nosuch.setting', true) is null",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 17,
                  "val": {
                    "NullTest": {
                      "arg": {
                        "FuncCall": {
                          "args": [
                            {
                              "A_Const": {
                                "location": 33,
                                "sval": {
                                  "sval": "nosuch.setting",
                                },
                              },
                            },
                            {
                              "A_Const": {
                                "boolval": {
                                  "boolval": true,
                                },
                                "location": 51,
                              },
                            },
                          ],
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "current_setting",
                              },
                            },
                          ],
                          "location": 17,
                        },
                      },
                      "location": 57,
                      "nulltesttype": "IS_NULL",
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`guc.sql > line 294 1`] = `
[
  "set nosuch.setting = 'nada'",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 21,
                  "sval": {
                    "sval": "nada",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "nosuch.setting",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`guc.sql > line 308 1`] = `
[
  "set check_function_bodies = off",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 28,
                  "sval": {
                    "sval": "off",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "check_function_bodies",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`guc.sql > line 310 1`] = `
[
  "create function func_with_bad_set() returns int as $$ select 1 $$
language sql
set default_text_search_config = no_such_config",
  {
    "stmts": [
      {
        "stmt": {
          "CreateFunctionStmt": {
            "funcname": [
              {
                "String": {
                  "sval": "func_with_bad_set",
                },
              },
            ],
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": " select 1 ",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "as",
                  "location": 48,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "sql",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "language",
                  "location": 66,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "VariableSetStmt": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 112,
                            "sval": {
                              "sval": "no_such_config",
                            },
                          },
                        },
                      ],
                      "kind": "VAR_SET_VALUE",
                      "name": "default_text_search_config",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "set",
                  "location": 79,
                },
              },
            ],
            "returnType": {
              "location": 44,
              "names": [
                {
                  "String": {
                    "sval": "pg_catalog",
                  },
                },
                {
                  "String": {
                    "sval": "int4",
                  },
                },
              ],
              "typemod": -1,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`guc.sql > line 314 1`] = `
[
  "select func_with_bad_set()",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "func_with_bad_set",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`guc.sql > line 316 1`] = `
[
  "reset check_function_bodies",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "kind": "VAR_RESET",
            "name": "check_function_bodies",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`guc.sql > line 318 1`] = `
[
  "set default_with_oids to f",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 25,
                  "sval": {
                    "sval": "f",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "default_with_oids",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`guc.sql > line 323 1`] = `
[
  "SELECT pg_settings_get_flags(NULL)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "isnull": true,
                            "location": 29,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_settings_get_flags",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`guc.sql > line 335 1`] = `
[
  "SELECT name FROM tab_settings_flags
  WHERE category = 'Developer Options' AND NOT not_in_sample
  ORDER BY 1",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 17,
                  "relname": "tab_settings_flags",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "A_Const": {
                      "ival": {
                        "ival": 1,
                      },
                      "location": 108,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "name",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "BoolExpr": {
                "args": [
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "category",
                              },
                            },
                          ],
                          "location": 44,
                        },
                      },
                      "location": 53,
                      "name": [
                        {
                          "String": {
                            "sval": "=",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "location": 55,
                          "sval": {
                            "sval": "Developer Options",
                          },
                        },
                      },
                    },
                  },
                  {
                    "BoolExpr": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "not_in_sample",
                                },
                              },
                            ],
                            "location": 83,
                          },
                        },
                      ],
                      "boolop": "NOT_EXPR",
                      "location": 79,
                    },
                  },
                ],
                "boolop": "AND_EXPR",
                "location": 75,
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`guc.sql > line 340 1`] = `
[
  "SELECT name FROM tab_settings_flags
  WHERE category ~ '^Query Tuning' AND NOT explain
  ORDER BY 1",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 17,
                  "relname": "tab_settings_flags",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "A_Const": {
                      "ival": {
                        "ival": 1,
                      },
                      "location": 98,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "name",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "BoolExpr": {
                "args": [
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "category",
                              },
                            },
                          ],
                          "location": 44,
                        },
                      },
                      "location": 53,
                      "name": [
                        {
                          "String": {
                            "sval": "~",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "location": 55,
                          "sval": {
                            "sval": "^Query Tuning",
                          },
                        },
                      },
                    },
                  },
                  {
                    "BoolExpr": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "explain",
                                },
                              },
                            ],
                            "location": 79,
                          },
                        },
                      ],
                      "boolop": "NOT_EXPR",
                      "location": 75,
                    },
                  },
                ],
                "boolop": "AND_EXPR",
                "location": 71,
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`guc.sql > line 344 1`] = `
[
  "SELECT name FROM tab_settings_flags
  WHERE NOT category = 'Preset Options' AND runtime_computed
  ORDER BY 1",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 17,
                  "relname": "tab_settings_flags",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "A_Const": {
                      "ival": {
                        "ival": 1,
                      },
                      "location": 108,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "name",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "BoolExpr": {
                "args": [
                  {
                    "BoolExpr": {
                      "args": [
                        {
                          "A_Expr": {
                            "kind": "AEXPR_OP",
                            "lexpr": {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "category",
                                    },
                                  },
                                ],
                                "location": 48,
                              },
                            },
                            "location": 57,
                            "name": [
                              {
                                "String": {
                                  "sval": "=",
                                },
                              },
                            ],
                            "rexpr": {
                              "A_Const": {
                                "location": 59,
                                "sval": {
                                  "sval": "Preset Options",
                                },
                              },
                            },
                          },
                        },
                      ],
                      "boolop": "NOT_EXPR",
                      "location": 44,
                    },
                  },
                  {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "runtime_computed",
                          },
                        },
                      ],
                      "location": 80,
                    },
                  },
                ],
                "boolop": "AND_EXPR",
                "location": 76,
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`guc.sql > line 352 1`] = `
[
  "SELECT name FROM tab_settings_flags
  WHERE no_reset AND NOT no_reset_all
  ORDER BY 1",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 17,
                  "relname": "tab_settings_flags",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "A_Const": {
                      "ival": {
                        "ival": 1,
                      },
                      "location": 85,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "name",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "BoolExpr": {
                "args": [
                  {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "no_reset",
                          },
                        },
                      ],
                      "location": 44,
                    },
                  },
                  {
                    "BoolExpr": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "no_reset_all",
                                },
                              },
                            ],
                            "location": 61,
                          },
                        },
                      ],
                      "boolop": "NOT_EXPR",
                      "location": 57,
                    },
                  },
                ],
                "boolop": "AND_EXPR",
                "location": 53,
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
